# pico_powerstation_c

./: .gitignore  ANIMATION_CHANGES.md  BUILD.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  memmap_16mb.ld  pico_sdk_import.cmake  workplan.md
OTA_ready/: combined_loader_recovery_main.uf2
archive/16mb_experiment_20260327/boards/: powerstation_rp2040_16mb_generic.h  powerstation_rp2040_16mb_w25q080.h
archive/session_extras_20260327/docs/: battery_efficiency_learning.md
archive/session_extras_20260327/src/bms/: bms_seg.c  bms_seg.h
docs/: CODE_DESCRIPTION_EN.md  CODE_DESCRIPTION_UK.md  ESP32_S2_WEB_UI_OTA_GUIDE.md  FLASHING_GUIDE_EN.md  FLASHING_GUIDE_UK.md  PICO_OTA_ROADMAP.md
docs/notes/: BUILD_FIXES_2026-03-11.md  README.md  RELEASE_1.0.md
esp32_s2_bridge/: README.md  esp32_s2_bridge.ino  platformio.ini
esp32_s2_bridge/src/: main.cpp  pico_ota_ui.h  web_ui.h
release/1.0/: README.md  combined_loader_recovery_main.uf2
src/: config.h  main.c  main_cpp_display_test.cpp  main_ota_loader.c  main_periph_test_new_pinout.c  main_tiny_slot_test.c
src/app/: boot_control.c  boot_control.h  buzzer.c  buzzer.h  display.c  display.h  esp_manager.c  esp_manager.h  ota_manager.c  ota_manager.h  power_control.c  power_control.h  power_sequencer.c  power_sequencer.h  protection.c  protection.h  runtime_policy.h  save_manager.c  save_manager.h  session_manager.c  session_manager.h  system_settings.c  system_settings.h  ui.c  ui.h  ui_assets.c  ui_assets.h
src/bms/: battery.c  battery.h  bms_ekf.c  bms_ekf.h  bms_logger.c  bms_logger.h  bms_ocv.c  bms_ocv.h  bms_predictor.c  bms_predictor.h  bms_rint.c  bms_rint.h  bms_soh.c  bms_soh.h  bms_stats.c  bms_stats.h  flash_nvm.c  flash_nvm.h
src/drivers/: ina226.c  ina226.h  ina3221.c  ina3221.h  lm75a.c  lm75a.h  st7789.cpp  st7789.h  tca9548a.c  tca9548a.h
tmp/pdfs/: generate_app_summary_pdf.py
tools/: build_combined_uf2.py  combine_uf2.py
ui_assets/: README.md  manifest.json
ui_assets/icons/rgb565_c_32/: icon_arrow_left.h  icon_arrow_right.h  icon_battery.h  icon_bell.h  icon_bms.h  icon_capacity.h  icon_cell.h  icon_cells.h  icon_charge.h  icon_chart.h  icon_clock.h  icon_current.h  icon_dc_out.h  icon_down.h  icon_estimate.h  icon_fan.h  icon_help.h  icon_home.h  icon_info.h  icon_input.h  icon_inverter.h  icon_light.h  icon_lock.h  icon_logs.h  icon_menu.h  icon_minus.h  icon_ok.h  icon_output.h  icon_plus.h  icon_port.h  icon_power.h  icon_search.h  icon_settings.h  icon_shield.h  icon_sun.h  icon_temperature.h  icon_thermal.h  icon_unlock.h  icon_up.h  icon_usb.h  (+3 more)
ui_assets/icons/rgb565_c_64/: icon_arrow_left.h  icon_arrow_right.h  icon_battery.h  icon_bell.h  icon_bms.h  icon_capacity.h  icon_cell.h  icon_cells.h  icon_charge.h  icon_chart.h  icon_clock.h  icon_current.h  icon_dc_out.h  icon_down.h  icon_estimate.h  icon_fan.h  icon_help.h  icon_home.h  icon_info.h  icon_input.h  icon_inverter.h  icon_light.h  icon_lock.h  icon_logs.h  icon_menu.h  icon_minus.h  icon_ok.h  icon_output.h  icon_plus.h  icon_port.h  icon_power.h  icon_search.h  icon_settings.h  icon_shield.h  icon_sun.h  icon_temperature.h  icon_thermal.h  icon_unlock.h  icon_up.h  icon_usb.h  (+3 more)
ui_assets/preview/: index.html
ui_assets/screens/rgb565_c_240x280/: screen_alarms.h  screen_battery.h  screen_boot.h  screen_home.h  screen_outputs.h  screen_settings.h  screen_shutdown.h
ui_assets/ui_elements/rgb565_c/: badge_cut.h  badge_ok.h  badge_warn.h  card_alarm.h  card_power.h  card_status.h  progress_blue_48.h  progress_green_70.h  progress_red_18.h  selector_focus.h  tile_battery.h  tile_logs.h  tile_outputs.h  tile_settings.h
